# pipenv-to-requirements

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pylintrc  .pyup.yml  .travis.yml  LICENSE  Makefile  Pipfile  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
pipenv_to_requirements/: __init__.py  test_cli.py  test_parsing.py
pipenv_to_requirements/vectors/: Pipfile.editable  Pipfile.editable.requirements-dev.txt  Pipfile.editable.requirements.txt  Pipfile.extras  Pipfile.extras.requirements-dev.txt  Pipfile.extras.requirements.txt  Pipfile.markers  Pipfile.markers.requirements-dev.txt  Pipfile.normal
