[metadata]
name = pipenv-to-requirements
summary = Generate requirements[-dev].txt from Pipfile using pipenv
description-file =
    README.rst
author = Gaetan Semet
author-email = gaetan@xeberon.net
home-page = https://github.com/gsemet/pipenv-to-requirements
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    pipenv_to_requirements

[entry_points]
console_scripts =
    pipenv_to_requirements = pipenv_to_requirements:main

[pbr]
warnerrors = True

[wheel]
universal = 1

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
